--- a/qlash.css
+++ b/qlash.css
@@ -279,6 +279,12 @@ input, select {
     color: var(--correct-color);
 }
 
+.score-gained {
+    color: var(--correct-color);
+    font-weight: bold;
+    margin: 0 4px;
+}
+
 /* Styling for the scoreboard */
 .scoreboard {
     margin-top: 25px; /* Increased margin from first file */
